--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
 	  <br>
 	  	<div class="credits-wrapper">
         <div class="credits box-shadow">
-            Back to <a href="https://heartrepair.space" target="new">HeartRepair.Space</a><br> 
-            Game source code available <a href="https://github.com/heartrepair/2048" target="new">here.</a> 
+            Back to <a href="https://pretend.space" target="new">Pretend.Space</a><br> 
+            Game source code available <a href="https://github.com/pretendspace/2048" target="new">here.</a> 
         </div>
     </div>
     <div class="heading">
